# SupplyFlow-CRM

./: .dev.vars  .dockerignore  .env  .env.example  .gitignore  BACKUPS.md  Dockerfile  README.md  analytics_queries.sql  docker-compose.yml  package-lock.json  package.json  preview_test.html  pyproject.toml  replace_settings.cjs  requirements.txt  schema.sql  temp_settings.js  test-server.cjs  tsconfig.analytics.json  tsconfig.json  vitest.config.ts  wrangler-container.toml  wrangler.toml
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
.wrangler/tmp/bundle-1HGB3I/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-3ZNbkg/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-7TDr0E/: middleware-loader.entry.ts
.wrangler/tmp/bundle-8FcCnk/: middleware-loader.entry.ts
.wrangler/tmp/bundle-F3Ekt8/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-dWYj4K/: middleware-loader.entry.ts
.wrangler/tmp/bundle-v89bir/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-E7UHn0/: index.js  index.js.map
public/: app.js  index.html  mobile.css  styles.css
public/analytics/: app.ts  index.html  tailwind-config.js
python_app/: main.py
scripts/: auto-deploy.sh  backup-mongodb.sh  backup.ps1  deploy-node.sh  deploy.sh  generate-password-hash.js  init-admin.js  init-database.sh  migrate-to-mongodb.js  reset-password.js
src/: analytics.ts  db.ts  index.test.ts  index.ts  mongodb.ts  server.ts  types.ts
(+12 files in other folders)
