[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-cloudflare-app"
version = "0.1.0"
description = "CRM Cloudflare app backend services."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "boto3==1.35.17",
  "python-multipart==0.0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python_app*"]
